--- a/index.html
+++ b/index.html
@@ -16,23 +16,22 @@
             </div>
             <div class="nueva_tarea">
                 <p>Nueva tarea</p>
-                <input id="nuevaTarea" type="text">
-                <button id="agregarTarea">Agregar</button>
+                <input id="input_tarea" type="text">
+                <button id="agregar_tarea">Agregar</button>
             </div>
             <div class="resumen_tareas">
-                <p>Total: </p> <span id="tareasTotales"></span>
-                <p>Realizadas: </p> <span id="tareasrealizadas"></span>
+                <p> Total: <span id="tareas_totales"></span> </p>
+                <p>Realizadas: <span id="tareas_realizadas"></span> </p>
             </div>
             <div class="idtareas">
                 <table>
                     <tr>
                         <th id="t1">ID</th>
                         <th id="t2">Tarea</th>
-                        <th id="t3">Realizada</th>
                     </tr>
                 </table>
                 <div id="cajatareas">
-                    <ul id="listatareas">
+                    <ul id="lista_tareas">
                     </ul>
                 </div>
             </div>
